[package]
name = "spl-memo"
version = "3.0.1"
description = "Solana Program Library Memo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = { git = "https://github.com/solana-labs/solana", rev = "41c160d58204cb2a9482f558f7285417dd442349" }

[dev-dependencies]
solana-program-test = { git = "https://github.com/solana-labs/solana", rev = "41c160d58204cb2a9482f558f7285417dd442349" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "41c160d58204cb2a9482f558f7285417dd442349" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
